# Homeworks

./: .gitignore  README.md
HSESchoolWebsiteProject/: index.html
HSESchoolWebsiteProject/css/: main.css
MSUNumMethods/: README.md
MSUNumMethods/1_sem/: home1_1.c  home1_2.c  home1_3.c  home1_4.c  work_contr_1.c  worl_contr_2.c  zachet.c  zachet1.c  zachet2.c  (+2 more)
MSUStatistcs/: README.md  home_1.ipynb  home_2.ipynb  home_3.ipynb  home_4.ipynb  home_5.ipynb  home_6.ipynb  home_7.ipynb
QstfinEntereanceProblems/: problem_test_labels.csv
SberEntereanceProblems/: num3.ipynb
SchoolWebsiteProject/: .gitignore  README.md  manage.py
qstfin/: main.ipynb
sber_problem/: num2.ipynb
vega_ProgEngineer/: main.ipynb
vega_ProgEngineer/project/MarketMicrostructure/: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
vega_ProgEngineer/project/MarketMicrostructure/script/: main.ipynb  stoikov.ipynb  stoikov_comments.ipynb  stoikov_ivan.ipynb
vega_ProgEngineer/project/MarketMicrostructure/src/: lib.rs
vega_ProgEngineer/project/MarketMicrostructure/src/market_microstructure_models/: mod.rs
vega_ProgEngineer/project/MarketMicrostructure/src/market_microstructure_models/backtest/: mod.rs
vega_ProgEngineer/project/MarketMicrostructure/src/market_microstructure_models/models/: mod.rs  stoikov.rs
vega_ProgEngineer/project/MarketMicrostructure/src/market_microstructure_models/order_book/: mod.rs  side.rs
vega_ProgEngineer/project/MarketMicrostructure/src/order_book/: quote_l3.rs
vega_prog_eng/: momentum_strategy_1.csv.csv  Домашнее задание в2.docx
(+220 files in other folders)
