[package]
name = "market_microstructure_models"
version = "0.1.0"
edition = "2021"
authors = ["Artemy Sazonov", "Ivan Cherepakhin"]
repository = "https://github.com/ArtemySazonov/MarketMicrostructure"
homepage = "https://github.com/ArtemySazonov/MarketMicrostructure"
readme = "README.md"


[lib]
name = "market_microstructure_models"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
ndarray = "0.15.6"
numpy = "0.19.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tqdm = "0.6.0"

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]


